--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+git://github.com/Chia-Network/chia-blockchain.git@main#egg=chia-blockchain
+git+git://github.com/Chia-Network/chia-blockchain.git@ms.pooling#egg=chia-blockchain
 black
 flake8
 mypy
